--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -28,4 +28,5 @@
       email: foo@curie.fr
       twitter: foo
       education:
-        - foo
+        - ECAM Lyon, MSc in Software Engineering, Electronics
+        - CentraleSupélec, MSc in Software Engineering
