--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: ""
 url: "http://rt2lab.github.io"
 
+google_analytics: UA-105599779-7
+
 include:
   - _pages
 
